# react-native-macos

./: .bazelignore  .bazelrc  .gitignore  .pnpmfile.mjs  BAZEL.md  BAZEL_DOWNSTREAM_COMPAT.md  BAZEL_INTEGRATION.md  BUILD.bazel  PR_SUMMARY.md  WORKSPACE.bazel  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.ado/jobs/: npm-publish.yml
.ado/scripts/: verdaccio.sh
.ado/templates/: apple-job-publish.yml
.changeset/: pnpm-native-prototype.md
.github/actions/build-hermes-macos/: action.yml
.github/scripts/: change.mts  changeset-version-with-postbump.mts
.github/workflows/: danger-pr.yml  microsoft-build-rntester.yml  microsoft-build-spm.yml  microsoft-build-website.yml  microsoft-changesets-version.yml  microsoft-pr.yml  microsoft-prebuild-macos-core.yml  microsoft-react-native-test-app-integration.yml  microsoft-resolve-hermes.yml  microsoft-test-react-native-macos-init.yml  publish-bumped-packages.yml  test-libraries-on-nightlies.yml
.nx/version-plans/: version-plan-1745429002061.md
docsite/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
private/pnpm-policy/: package.json
private/react-native-codegen-typescript-test/: package.json
private/react-native-fantom/: package.json
scripts/: fantom.sh  npm-utils.js  objc-test.sh  run-ci-javascript-tests.js  try-set-nightly-hermes-compiler.js
scripts/build-types/: BuildApiSnapshot.js  README.md
scripts/diff-api-snapshot/: index.js
scripts/release-testing/: test-e2e-local-clean.js  test-e2e-local.js
tools/: BUILD.bazel  BUILD_EXAMPLE.bazel
(+14 files in other folders)
